# md2docx

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  start_webui.py
.cursor/backup/20251226_091438/: README.md
.cursor/rules/ci_cd_quality/: RULE.md
.cursor/rules/code_quality/: RULE.md
.cursor/rules/constitution/: RULE.md
.cursor/rules/dependency_management/: RULE.md
.cursor/rules/generator/: RULE.md
.cursor/rules/intelligent_evolution/: perception.sh
.cursor/rules/philosophy/: RULE.md
.cursor/rules/release_management/: RULE.md
.cursor/rules/templates/: templates.json
.cursor/rules/version_management/: RULE.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  development.md  plan.md  testing.md
docs/implementation/: ci_cd_setup.md  release_process.md  version_workflow.md
scripts/: batch_convert.py  batch_convert_test.py  publish_to_pypi.sh  test_roundtrip_demo.py
src/: __init__.py  cli.py
src/converter/: __init__.py  base.py
src/converter/elements/: list.py  task_list.py  text.py
src/md2docx/: __init__.py  cli.py
src/md2docx/converter/: __init__.py  base.py
src/md2docx/converter/elements/: base.py  heading.py  hr.py  html.py  image.py  list.py  table.py  text.py
src/md2docx/webui/: __init__.py  app.py
src/md2docx/webui/static/css/: styles.css
src/md2docx/webui/static/js/: app.js
src/md2docx/webui/templates/: index.html  preview.html
src/md2docx/webui/tests/: test_basic.py
src/mddocx/: __init__.py  cli.py
src/mddocx/converter/: base.py
src/mddocx/converter/elements/: __init__.py  base.py  blockquote.py  code.py  heading.py  hr.py  html.py  image.py  links.py  list.py  task_list.py  text.py
src/mddocx/webui/: app.py  config.py  start_webui.py
src/mddocx/webui/tests/: test_basic.py
tests/: conftest.py
tests/integration/: test_full_conversion.py  test_hr_integration.py  test_html_integration.py  test_image_integration.py  test_table_integration.py  test_task_list_integration.py
tests/samples/: test.md
tests/samples/output/: README.md
tests/unit/: test_cli.py  test_edge_cases.py  test_error_handling.py  test_large_files.py
tests/unit/test_elements/: test_blockquote.py  test_code.py  test_heading.py  test_hr.py  test_html.py  test_image.py  test_links.py  test_list.py  test_table.py  test_task_list.py  test_text.py
webui/: README.md  __init__.py  app.py  config.py  start_webui.py
webui/static/css/: styles.css
webui/static/js/: app.js
webui/templates/: base.html  index.html
webui/tests/: __init__.py  test_basic.py
