[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = ["src"]

[project]
name = "mddocx"
version = "0.4.3"
description = "一个功能强大的 Markdown 转 DOCX 文档转换工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "jw.zhou", email = "zhou24388@163.com"}
]
keywords = ["markdown", "docx", "converter", "document", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "python-docx>=0.8.11",
    "markdown-it-py>=2.1.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "build>=1.0.0",
    "twine>=4.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/wangqiqi/md2docx"
Repository = "https://github.com/wangqiqi/md2docx"
Documentation = "https://github.com/wangqiqi/md2docx#readme"
Issues = "https://github.com/wangqiqi/md2docx/issues"

[project.scripts]
mddocx = "mddocx.cli:main"
mddocx-webui = "mddocx.webui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mddocx = ["webui/templates/*.html", "webui/static/**/*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E402"]  # E402: 允许有意的导入位置
exclude = ["__pycache__", ".git", ".venv", "dist", "build", "*.egg-info"]
